dev/tests/cases/neg/27_fixed_global_compound.tv
fixed limit: i64 = 10;

df bump() -> void {
    limit += 1;
}

df main() -> void {
    bump();
    echo!(limit);
}
